# Credit_Assessment_Env

./: .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  demo_interactive.py  inference.py  lenient_parser.py  loan_decision.py  models.py  openenv.yaml  pitch.txt  pyproject.toml  requirements-train.txt  sft_warmup.py  train_grpo.py  train_grpo_colab.ipynb  train_utils.py  training_log.example.json  training_log.json  validate-submission.sh  visualize_results.py
assets/: fair_eval_results_adversarial_n120.json  fair_eval_results_curriculum_n120.json  validation_output.txt
assets/slides/: applicant_profile.txt
docs/: blog.md  colab_runbook.md  hf_jobs_runbook.md  pitch.md  slide_deck.md  video_script.md
scripts/: fair_eval.py  generate_plots.py  generate_slide_assets.py  run_onsite_pipeline.sh  run_onsite_smoketest.sh
server/: Dockerfile  __init__.py  app.py  credit_assessment_env_environment.py
server/generators/: __init__.py  home_loan.py  personal_loan.py  vehicle_loan.py
server/ground_truth/: __init__.py  home_loan.py  personal_loan.py  vehicle_loan.py
server/helpers/: __init__.py  profile_builder.py
server/rewards/: __init__.py  home_loan.py  personal_loan.py  vehicle_loan.py
tests/: conftest.py  test_adversarial_strategies.py  test_ground_truth.py  test_rewards.py
