# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-credit_assessment_env"
version = "0.1.0"
description = "Credit Assessment Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "trl>=0.17.0",
    "transformers>=4.50.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "torch>=2.0.0",
]

[project.scripts]
server = "credit_assessment_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "credit_assessment_env",
    "credit_assessment_env.server",
    "credit_assessment_env.server.generators",
    "credit_assessment_env.server.ground_truth",
    "credit_assessment_env.server.rewards",
    "credit_assessment_env.server.helpers",
]

[tool.setuptools.package-dir]
"credit_assessment_env" = "."